src/style.css
body {
  font-family: 'Courier New', Courier, monospace;
  background: #fff;
}

canvas {
  border: #999 1px solid;
  background-color: #000;
}

nav {
  position: sticky;
  top: 0;
  display: flex;
  align-items: center;
  gap: 8px;
  font-size: 14px;
  background-color: #fff;
  padding: 4px;
  border-bottom: #ddd 2px dashed;
}

pre {
  word-break: break-all;
  line-break: anywhere;
  white-space: pre-wrap;
}

#data {
  max-width: 68ch;
  min-height: calc(8ch + 8px);
  max-height: calc(32ch + 8px);
  overflow-y: scroll;
  background-color: #444;
  border-radius: 8px;
  border: 4px solid #aaa;
  padding: 4px 8px;
  box-shadow: inset 0 0 10px #000000f0;
  color: #fff;
  font-size: 20px;
}

select, button {
  padding: 4px 8px;
  background-color: #c0c0c0;
  border-width: 2px;
  border-color: #fff #808080 #808080 #fff;
  cursor: pointer;
  outline: #000 1px solid;
  border-radius: 2px;
}

select:focus, button:focus {
  outline-width: 2px;
}

#loadingBars {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  display: block;
  z-index: -1;
}

#ui {
  position: absolute;
  inset: 32px 120px;
  padding: 20px;
  background-color: #fff;
  overflow-y: auto;
}

